Bug 52751 - All WKCACFContexts with uncommitted changes get flushed whenever any composited page is resized
Summary: All WKCACFContexts with uncommitted changes get flushed whenever any composit...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows XP
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords: PlatformOnly
Depends on:
Blocks:
 
Reported: 2011-01-19 14:54 PST by Adam Roben (:aroben)
Modified: 2011-01-20 09:15 PST (History)
2 users (show)

See Also:


Attachments
Only flush our own context when we get resized (1.55 KB, patch)
2011-01-19 14:58 PST, Adam Roben (:aroben)
simon.fraser: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-01-19 14:54:58 PST
All WKCACFContexts with uncommitted changes get flushed whenever any composited page is resized
Comment 1 Adam Roben (:aroben) 2011-01-19 14:58:34 PST
Created attachment 79493 [details]
Only flush our own context when we get resized
Comment 2 Adam Roben (:aroben) 2011-01-20 09:15:22 PST
Committed r76257: <http://trac.webkit.org/changeset/76257>