Only flush our own context when we get resized

Fixes <http://webkit.org/b/52751> All WKCACFContexts with uncommitted
changes get flushed whenever any composited page is resized

Reviewed by Simon Fraser.

* platform/graphics/win/WKCACFLayerRenderer.cpp:
(WebCore::WKCACFLayerRenderer::resize): Just flush our own context, not all contexts
WKCACFContextFlusher knows about. After all, ours is the only one that just got resized!

Canonical link: https://commits.webkit.org/66495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76257 268f45cc-cd09-0410-ab3c-d52691b4dbfc